# layer-wise-anatomical-attention

./: .gitignore  HOWTORUN.txt  LICENSE  README-MIMIC.md  README.md  REPO_LAYOUT.md  benchmark_mask_sweep.json  benchmark_stage1_mask.json  pyproject.toml  pytest.ini  requirements.txt
artifacts/LAnA-MIMIC-TERM/.hf_publish/lana_radgen/: __init__.py
artifacts/LAnA-v2/.hf_publish/lana_radgen/: configuration_lana.py  segmenters.py
artifacts/LAnA-v3/.hf_publish/lana_radgen/: gpt2_modified.py
data_utils/: __init__.py  cache_io.py  image_ops.py  mask_ops.py
licenses/: DINOv3-LICENSE.txt
scripts/: audit_cached_image_sizes.py  benchmark_dinov3_inference.py  benchmark_num_workers.py  cleanup_completed_checkpoints.py  evaluate.py  evaluate_lana_arxiv.py  package_lana_arxiv.py  preprocess_dataset.py  push_to_hub.py  reproduce_cloud_best_model7.py  republish_collection.py  run_deletions_cloud_eval.py  run_train_eval_publish.py  train.py  try_model_best7_variants.py
src/lana_arxiv/: __init__.py  configuration_lana_arxiv.py  image_processing_lana_arxiv.py  modeling_lana_arxiv.py  processing_lana_arxiv.py
src/lana_radgen/: __init__.py  configuration_lana.py  gpt2_modified.py  hub.py  image_processing_lana.py  layerwise_anatomical_attention.py  logging_utils.py  metrics.py  model_card.py  modeling_lana.py  processing_lana.py  segmenters.py
src/lana_radgen/attention/: layerwise_anatomical_attention.py
src/lana_radgen/data/: __init__.py  datasets.py
tests/: test_artifact_dedup.py  test_lana_processor.py  test_modeling_lana.py  test_text_metrics.py
(+3 files in other folders)
